--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,8 @@
     <!--BootstrapJS [ RECOMMENDED ]-->
     <script src="assets/js/bootstrap.min.js"></script>
     <!--NiftyJS [ RECOMMENDED ]-->
-    <script src="assets/js/nifty.min.js"></script>
+    <script src="assets/js/nifty.js"></script>
+    <!-- <script src="assets/js/nifty.min.js"></script> -->
     <!--=================================================-->
     <!--Demo script [ DEMONSTRATION ]-->
     <!-- <script src="assets/js/demo/nifty-demo.min.js"></script> -->
